<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Detalles del Lugar"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="Latitud:" />

                <TextView
                    android:id="@+id/lat"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="latitud"
                    android:textColor="#FFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="Longitud:" />

                <TextView
                    android:id="@+id/lon"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="longitud"
                    android:textColor="#FFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/t_fecha" />

                <TextView
                    android:id="@+id/fecha"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="#FFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/t_nombre" />

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:lines="1" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="top"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:text="@string/t_descripcion" />

                <EditText
                    android:id="@+id/descripcion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="top|left"
                    android:lines="5"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/t_foto" />

                    <ImageButton
                        android:id="@+id/btn_foto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:onClick="hacerfoto"
                        android:src="@android:drawable/ic_menu_camera" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/foto"
                    android:layout_width="133dp"
                    android:layout_height="100dp"
                    android:layout_gravity="right|bottom"
                    android:layout_marginLeft="28dp"
                    android:layout_weight="2"
                    android:background="@drawable/bgfoto"
                    android:contentDescription="Foto"
                    android:scaleType="centerInside"
                    android:src="@drawable/no_photo3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/crear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="b_crear"
            android:text="@string/b_crear" />

        <Button
            android:id="@+id/editar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="b_editar"
            android:text="@string/b_guardar" />

        <Button
            android:id="@+id/borrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="b_borrar"
            android:text="@string/b_borrar" />

        <Button
            android:id="@+id/volver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="b_volver"
            android:text="@string/b_volver" />
    </LinearLayout>

</LinearLayout>