<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.perotio.mapas.PrincipalActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:background="#FFF"
            android:contentDescription="Line"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="8dp" />

        <Button
            android:id="@+id/bmapav2"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:text="@string/mapa"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/blista"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.39999998" />

        <Button
            android:id="@+id/blista"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:text="@string/b_lista"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bmapav2"
            app:layout_constraintVertical_bias="0.52" />


</android.support.constraint.ConstraintLayout>